finished the main code

--- a/index.html
+++ b/index.html
@@ -36,31 +36,59 @@
           </div>
         </div>
     </div>  
+
+<div class="middle-section">
+  <div class="middle-header">
     <h1>Some random information.</h1>
-    <div>
-    <img src="LINK" alt="this is a placeholder for an image" width="300px" height="200px">
-    <p>this is some text below the boxes</p>
+  </div>
+  <div class="boxes">
+    <div class="box">
+      <img src="LINK" alt="placeholder image">
+      <p>This is some text below the boxes</p>
     </div>
-    <div>
-    <img src="LINK" alt="this is a placeholder for an image" width="300px" height="200px">
-    <p>this is some text below the boxes</p>
+    <div class="box">
+      <img src="LINK" alt="placeholder image">
+      <p>This is some text below the boxes</p>
     </div>
-    <div>
-    <img src="LINK" alt="this is a placeholder for an image" width="300px" height="200px">
-    <p>this is some text below the boxes</p>
+    <div class="box">
+      <img src="LINK" alt="placeholder image">
+      <p>This is some text below the boxes</p>
     </div>
-    <div>
-    <img src="LINK" alt="this is a placeholder for an image" width="300px" height="200px">
-    <p>this is some text below the boxes</p>
+    <div class="box">
+      <img src="LINK" alt="placeholder image">
+      <p>This is some text below the boxes</p>
     </div>
+  </div>
+</div>
 
-    <p>This is a section for a testimonial or inspiring quote or whatever and its supposed to be beautiful and inspiring</p>
+<div class="quote-section">
+  <div class="quote-container">
+    <div class="quote">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam dolor similique corporis perferendis adipisci hic quae eius provident? Ratione facilis molestias soluta, delectus blanditiis maiores labore obcaecati molestiae eaque fuga?</p>
+    </div>
+    <div class="quote-sign">
     <p>Yours truly</p>
+    </div>
+  </div>
+</div>
 
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button!</p>
-    <button>Sign up</button>
+<div class="call-section">
+  <div class="call-container">
+    <div class="call-header">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button!</p>
+    </div>    
+    <div class="call-button">
+      <button>Sign up</button>
+    </div>
+  </div>    
+</div>
 
-    <p>Copyright @ Diego Ballesteros</p>
+
+<div class="footer">
+<p>Copyright @ Diego Ballesteros</p>
+</div>
+
+
 </body>
 </html>
