--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="container">
           <div class="up-header">
             <div id="header-logo">
-              <h1>Header Logo</h1>
+              <h1>Dear Baby Bean,</h1>
             </div>
             <div class="header-text">
               <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li>I LOVE YOU</li>
+                <li>I LOVE YOU</li>
+                <li>I LOVE YOU</li>
               </ul>
             </div>
           </div>
@@ -25,38 +25,40 @@
           <div class="mid-header">
             <div class="mid-text">
               <div id="awesome">
-                <h1>This website is awesome</h1>
+                <h1>YOU ARE THE LOVE OF MY LIFE</h1>
               </div>
               <div class="header-text">
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <p>FOREVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER AND EVER</p>
               </div>
-                <button id="button">Sign up</button>
+                <a href="MWAH.html">
+                  <button id="button">KISSIES</button>
+                </a>  
             </div>
-            <img src="./images/FLCL.jpg" alt="this is a placeholder for an image" width="500px" height="auto" />
+            <img src="./images/heart.gif" alt="this is a placeholder for an image" width="500px" height="auto" />
           </div>
         </div>
     </div>  
 
 <div class="middle-section">
   <div class="middle-header">
-    <h1>Some random information.</h1>
+    <h1>YOU ARE MY FAVORITE GIRL IN THE ENTIRE UNIVERSE</h1>
   </div>
   <div class="boxes">
     <div class="box">
-      <img src="LINK" alt="placeholder image">
-      <p>This is some text below the boxes</p>
+      <img src="./images/kiss 1.png" alt="placeholder image">
+      <p>I ADORE YOU</p>
     </div>
     <div class="box">
-      <img src="LINK" alt="placeholder image">
-      <p>This is some text below the boxes</p>
+      <img src="./images/kiss 2.png" alt="placeholder image">
+      <p>YOU ARE EVERYTHING TO ME</p>
     </div>
     <div class="box">
-      <img src="LINK" alt="placeholder image">
-      <p>This is some text below the boxes</p>
+      <img src="./images/kiss 3.png" alt="placeholder image">
+      <p>THE LOVE OF MY LIFE</p>
     </div>
     <div class="box">
-      <img src="LINK" alt="placeholder image">
-      <p>This is some text below the boxes</p>
+      <img src="./images/kiss 4.png" alt="placeholder image">
+      <p>MWAH MWAH MWAH MWAH MWAH MWAH</p>
     </div>
   </div>
 </div>
@@ -64,10 +66,19 @@
 <div class="quote-section">
   <div class="quote-container">
     <div class="quote">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam dolor similique corporis perferendis adipisci hic quae eius provident? Ratione facilis molestias soluta, delectus blanditiis maiores labore obcaecati molestiae eaque fuga?</p>
+      <p>Dear Princess,</p>
+      <p>It was around this time when I first met you, two years ago. To say that you have completely turned my existence would be an understatement. You came crashing into my life with all your joy and all your love and filled every single inch of my body with an unfathomable amount of happiness. Your presence and your support and your constant showering of love has made me the man I am today, and I couldn’t be prouder to be that man because that is a man that has you by his side. To be the man that you love so dearly is to be the happiest man in the world.</p>
+      <p>Going back to this past two years, I can only think of the amount of beauty that I have witnessed sharing my life with you. Its hard for me to try to describe the feeling of being yours, as your love is truly so monumental, so big and strong, that I simply cannot begin to explain the incredible blessing it is that I somehow managed to find you in this world. I will forever be thankful to everything that led me to you, call it destiny, call it luck, it will forever be the single most luckiest moment of my life, and the moment I will cherish until the day I die. It all feels like some huge butterfly effect, and to be standing where I am standing right now, it’s nothing else but an incredible blessing. I love you with all my being.</p>
+      <p>Two years of inside jokes, bullying, tears, laughter, hopes, dreams, plans, travels, struggles, change, and a million other moments that I have had the joy to spend by your side. We might give it for granted some times but we have truly lived and grown together. We saw each other graduate, travel, struggle, and deal with life while being there on the side cheering for one another. It might seem insignificant or even expected, but it truly is something so incredible and I just want to let you know that I will forever be thankful for all the support that you give me every day. From my lowest to my highest you have been there, and I know you will forever be there for me. I will always be there for you as well, and I will do so happily. There is no better purpose for me than to be your biggest supporter and number one admirer.</p>
+      <p>I love seeing you grow, and I love the way you battle through all the challenges of life. You are truly a person who shines and loves like I have never seen anybody else do so. Your light truly showers everything that you touch and everyone that witnesses it. You are a powerful woman, and an incredibly kind at that. I know life keeps changing, and God knows how many changes we have been through throughout this two years, but that is only another testament to how deep our love and life together has gotten and how perfectly cemented our souls intertwine with one another. I’m so proud of you, and I will forever be. You make me so proud every day.</p>
+      <p>More changes are coming our way these next months. Big ones. You will find yourself in a new world, and I know that that will stress you. However, I just want to let you know that I will be right there for you, at all times, always. I will always be there to lend an ear or to give advice. I know you need me as much as I need you, and that is exactly why we will persevere through everything coming our way. I have no doubts that you will find yourself at the end of this year in a way better place than last year, just like every year before that. You are always improving and always becoming better and happier, so please don’t worry about anything. You are strong, smart, kind, and charismatic. There is nothing coming your way that you won’t be able to deal with gracefully.</p>
+      <p>Regardless, now is not the time to worry about the future. Summer is coming and you will enjoy it so so much. You will have so much fun in Dubai, seeing the family and Louie. Catching up with friends, enjoying the weather, shopping, driving around, relaxing. After, an amazing trip in Rome and then in October, your baby pie will come and kiss you in person. Good times are right around the corner and I want you to enjoy them as much as you possibly can. As for us, we have dealt with this before, and this time will be no different. I will take care of you and make sure you feel loved and blessed to have chosen me as your partner. Everybody around you loves you and wants to see you happy, and I have no doubts you will be the happiest you have ever been.</p>
+      <p>Thank you for the best two years of my life princess. Thank you, thank you, thank you.</p>
+      <p>You really mean everything to me, and I will love you and cherish your love and your presence until the day I die.</p> 
     </div>
     <div class="quote-sign">
-    <p>Yours truly</p>
+    <p>Yours forever,</p>
+    <p>Diego</p>
     </div>
   </div>
 </div>
@@ -75,18 +86,20 @@
 <div class="call-section">
   <div class="call-container">
     <div class="call-header">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button!</p>
+      <h3>I LOVE YOU PRINCESS PIE</h3>
+      <p>MORE KISSIES HERE IF YOU DIDN'T GET ENOUGH ></p>
     </div>    
     <div class="call-button">
-      <button>Sign up</button>
+      <a href="MWAH.html">
+        <button id="button">KISSIES</button>
+      </a> 
     </div>
   </div>    
 </div>
 
 
 <div class="footer">
-<p>Copyright @ Diego Ballesteros</p>
+<p>I LOVE YOUUUUUUUUUUUUUUUUUUUUUUUU!!!!!!</p>
 </div>
 
 
